--- a/app/src/main/res/layout/activity_motiontts.xml
+++ b/app/src/main/res/layout/activity_motiontts.xml
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.113" />
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_login"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
