--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".SimpleDemo.LoginActivity">
 
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_logIn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/textView_loginTitle"
         android:layout_width="wrap_content"
@@ -16,7 +27,7 @@
         app:layout_constraintBottom_toTopOf="@+id/login_linear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_logIn" />
 
     <LinearLayout
         android:id="@+id/login_linear"
