--- a/app/src/main/res/layout/activity_main_control2.xml
+++ b/app/src/main/res/layout/activity_main_control2.xml
@@ -6,77 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".SimpleDemo.MainControlActivity">
 
-    <Button
-        android:id="@+id/button_start"
-        android:layout_width="wrap_content"
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar_mainControl"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="24dp"
-        android:text="開始"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="24dp"
-        android:text="Button"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="第一關"
-        android:textAlignment="center"
-        android:textSize="30sp"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView3"
+    <Button
+        android:id="@+id/button_challenge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="關卡解說：\n試著用現有的指令走到位於你前方三格的目的地吧"
-        android:textSize="18sp"
+        android:text="闖關"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_mainControl" />
 
-    <TextView
-        android:id="@+id/textView4"
+    <Button
+        android:id="@+id/button_userData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="能使用的指令："
-        android:textSize="24sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
+        android:text="使用者資料"
+        app:layout_constraintStart_toEndOf="@+id/button_lab"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_mainControl" />
 
-    <TextView
-        android:id="@+id/textView5"
+    <Button
+        android:id="@+id/button_lab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="8dp"
-        android:text="1.前進\n2.後退\n3.左轉\n4.右轉\n5.結束"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
+        android:layout_marginStart="4dp"
+        android:text="程式實驗室"
+        app:layout_constraintStart_toEndOf="@+id/button_challenge"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_mainControl" />
 
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:text="目前已輸入的指令："
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
 </android.support.constraint.ConstraintLayout>
