--- a/app/src/main/res/layout/activity_motiontts.xml
+++ b/app/src/main/res/layout/activity_motiontts.xml
@@ -18,7 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textView_cmdCanUse"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -40,7 +40,7 @@
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView_cmdCanUse"
         app:layout_constraintVertical_bias="0.113" />
 
 </android.support.constraint.ConstraintLayout>
