--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".SimpleDemo.LoginActivity">
 
-    <android.support.v7.widget.Toolbar
+    <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_logIn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -21,10 +22,11 @@
         android:id="@+id/textView_loginTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Demo App"
+        android:layout_marginTop="24dp"
+        android:text="用嘴吧寫程式Demo App"
         android:textColor="#000000"
         android:textSize="36sp"
-        app:layout_constraintBottom_toTopOf="@+id/login_linear"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_logIn" />
@@ -38,18 +40,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/textView_loginTitle">
 
         <TextView
             android:id="@+id/textView_login"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#2196F3"
+            android:background="#1B94F4"
             android:gravity="center"
             android:text="登入畫面"
             android:textAlignment="center"
-            android:textSize="30sp"
-            android:textColor="#000000"/>
+            android:textColor="#FFFFFF"
+            android:textSize="36sp"
+            android:textStyle="bold"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -59,22 +62,22 @@
 
             <TextView
                 android:id="@+id/textView_account"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="帳號："
+                android:layout_weight="2"
+                android:text="帳號 (Email)："
                 android:textAlignment="center"
-                android:textSize="24sp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/editText_account"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="請輸入帳號"
-                android:inputType="textPersonName"
+                android:hint="請輸入email"
+                android:inputType="textEmailAddress"
                 android:textSize="24sp" />
 
         </LinearLayout>
@@ -89,17 +92,17 @@
 
             <TextView
                 android:id="@+id/textView_password"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_weight="2"
                 android:text="密碼："
                 android:textAlignment="center"
-                android:textSize="24sp"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:textSize="24sp" />
 
             <EditText
                 android:id="@+id/editTextText_Password"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
@@ -118,9 +121,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="#FF9800"
+                android:background="#E89419"
                 android:text="登入"
-                android:textSize="24sp" />
+                android:textSize="24sp"
+                />
 
             <Button
                 android:id="@+id/button_regist"
@@ -131,6 +135,44 @@
                 android:text="註冊新帳號"
                 android:textSize="24sp" />
 
+            <Button
+                android:id="@+id/button_forgetPassword"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:background="#FFC107"
+                android:text="忘記密碼"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_blank1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
+
+            <Button
+                android:id="@+id/button_playWithoutLogin"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:backgroundTint="#000000"
+                android:text="無帳號體驗"
+                android:textColor="#FFFFFF"
+                android:textSize="24sp"
+                android:textStyle="bold"/>
+
+            <TextView
+                android:id="@+id/textView_blank2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="2" />
         </LinearLayout>
 
         <TextView
@@ -151,18 +193,18 @@
             android:layout_weight="1"
             android:text="!!! 注意 !!!"
             android:textAlignment="center"
-            android:textSize="24sp"
-            android:textColor="#000000"/>
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/textView_loginHint2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="如果是第一次使用，一定需要帳號來儲存破關進度喔:D"
+            android:text="如果想儲存進度，記得申請帳號喔 :D"
             android:textAlignment="center"
-            android:textSize="24sp"
-            android:textColor="#000000"/>
+            android:textColor="#000000"
+            android:textSize="24sp" />
 
     </LinearLayout>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
