--- a/app/src/main/res/layout/recycler_view_item_with_remove.xml
+++ b/app/src/main/res/layout/recycler_view_item_with_remove.xml
@@ -1,21 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:background="?android:attr/selectableItemBackground">
-        <TextView
-            android:id="@+id/textView_recycleItem2"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="8dp"
+    app:cardElevation="4dp"
+    android:layout_margin="8dp">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:textSize="20sp"/>
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:padding="8dp">
 
-        <Button
-            android:id="@+id/btn_ItemRemove"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="刪除" />
-</LinearLayout>
+                <TextView
+                    android:id="@+id/textView_recycleItem2"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textStyle="bold"/>
+
+                <Button
+                    android:id="@+id/button_recyclerView_remove"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="2"
+                    android:background="#F10909"
+                    android:text="刪除"
+                    android:textColor="#FFFFFF"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textStyle="bold" />
+        </LinearLayout>
+</androidx.cardview.widget.CardView>
+
